-
Bug
-
Resolution: Fixed
-
P1: Critical
-
None
-
6.3.2, 6.4.3, 6.5.3, 6.6.3, 6.7.3, 6.8.2, 6.9.0 Beta2, 6.9.0 Beta3
-
None
-
Archlinux, glibc 2.41+r9+ga900dbaf70f0-1, Linux 6.13.6-arch1-1
-
-
ff80fa127 (130-based), 416c7ff1e (122-based), 9c771916f (87-based), 08dfa5bba (134-based-refactor)
E.g. going to https://httpbin.org/status/500 with simplebrowser causes an immediate renderer process crash.
Wasn't there in Beta 1 as far as I can recall, but appeared in Beta 2. Also present in the current 6.10 snapshot from MaintenanceTool, though that shows January 17th as a date.
- is duplicated by
-
QTBUG-134799 QtWebEngineProc crashing with the new getrandom_vdso in glibc 2.41 & Linux 6.11
-
- Closed
-