Allow MAP_DROPPABLE memory mappings in Linux sandbox

Linux 6.11 has getrandom() as virtual dynamic shared object and glibc-2.41 adds support for it. In case of vsdo
implementation kernel will call mmap with MAP_DROPPABLE flag
which is restricted by chromium sandbox, causing render
process to fail. Allow new mmap flag in the sandbox.

Fixes: QTBUG-134631
Pick-to: 122-based 87-based
Change-Id: I4f303af85ac873222e768fe7139873774d51b022
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/631348
Reviewed-by: Kaloyan Chehlarski <kaloyan.chehlarski@qt.io>
Reviewed-by: Michal Klocek <michal.klocek@qt.io>